changed account to use CAS, added base appcontroller

--- a/TPS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TPS.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,12 @@
 ﻿@if(Request.IsAuthenticated) {
-    @Html.ActionLink(User.Identity.Name, "Index", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
-}
-else {
-    @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
+<div id="personalbar">
+	<!-- Example Welcome user message -->
+	<div class="col1">
+		<span id="welcome_user">Welcome back @User.Identity.Name!</span>
+	</div>
+	<!-- Example logout button -->
+	<div class="col2">
+        @Html.ActionLink("Logout", "LogOut", "Account")
+    </div>			
+</div>
 }
