--- a/TPS.Web/Views/Shared/_Layout.cshtml
+++ b/TPS.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,13 @@
         <meta name="viewport" content="width=device-width" />
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <link href="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Content/css")" rel="stylesheet" type="text/css" />
-        <script src="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Scripts/js")"></script>
+        @*<script src="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Scripts/js")"></script>*@
+        <script src="../../Scripts/jquery-1.7.2.js" type="text/javascript"></script>
+        <script src="../../Scripts/jquery-ui-1.8.19.js" type="text/javascript"></script>
+        <script src="../../Scripts/jquery.mobile-1.1.0.js" type="text/javascript"></script>
+        <script src="../../Scripts/jquery.validate.js" type="text/javascript"></script>
+        <script src="../../Scripts/modernizr-2.5.3.js" type="text/javascript"></script>
+
         <script>
             $(document).bind("mobileinit", function() {
                 // As of Beta 2, jQuery Mobile's Ajax navigation does not work in all cases (e.g.,
