--- a/TPS.Web/Views/Shared/_Layout.cshtml
+++ b/TPS.Web/Views/Shared/_Layout.cshtml
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title</title>
-        <meta name="viewport" content="width=device-width" />
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href="@Url.Css("Site.css")" rel="stylesheet" type="text/css" />
-        <link href="@Url.Css("jquery.mobile-1.1.0.css")" rel="stylesheet" type="text/css" />
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width" />
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="@Url.Css("Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Css("jquery.mobile-1.1.0.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Script("jquery-1.7.2.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jquery-ui-1.8.19.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jquery.mobile-1.1.0.js")" type="text/javascript"></script>
+    <script src="@Url.Script("jquery.validate.js")" type="text/javascript"></script>
+    <script src="@Url.Script("modernizr-2.5.3.js")" type="text/javascript"></script>
+    <script>
+        $(document).bind("mobileinit", function () {
+            // As of Beta 2, jQuery Mobile's Ajax navigation does not work in all cases (e.g.,
+            // when navigating from a mobile to a non-mobile page, or when clicking "back"
+            // after a form post), hence disabling it.
 
-        <script src="@Url.Script("jquery-1.7.2.js")" type="text/javascript"></script>
-        <script src="@Url.Script("jquery-ui-1.8.19.js")" type="text/javascript"></script>
-        <script src="@Url.Script("jquery.mobile-1.1.0.js")" type="text/javascript"></script>
-        <script src="@Url.Script("jquery.validate.js")" type="text/javascript"></script>
-        <script src="@Url.Script("modernizr-2.5.3.js")" type="text/javascript"></script>
-
-        <script>
-            $(document).bind("mobileinit", function() {
-                // As of Beta 2, jQuery Mobile's Ajax navigation does not work in all cases (e.g.,
-                // when navigating from a mobile to a non-mobile page, or when clicking "back"
-                // after a form post), hence disabling it.
-                $.mobile.ajaxEnabled = false;
-            });
-        </script>
-    </head>
-    <body>
-        <div data-role="page" data-theme="b">
-            <div data-role="header">
-                @if (IsSectionDefined("Header")) {
-                    @RenderSection("Header")
-                } else {
-                    <h1>@ViewBag.Title</h1>
-                    @Html.Partial("_LoginPartial")
-                }
-            </div>
-            <div data-role="content">
-                @RenderBody()
-            </div>
+            $.mobile.ajaxEnabled = false;
+        });
+    </script>
+    @RenderSection("AdditionalScripts", false)
+</head>
+<body>
+    <div data-role="page" data-theme="b">
+        <div data-role="header">
+            @if (IsSectionDefined("Header"))
+            {
+                @RenderSection("Header")
+            }
+            else
+            {
+                <h1>@ViewBag.Title</h1>
+                @Html.Partial("_LoginPartial")
+            }
         </div>
-    </body>
+        <div data-role="content">
+            @RenderBody()
+        </div>
+    </div>
+</body>
 </html>
