--- a/TPS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TPS.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,13 @@
-﻿@if(Request.IsAuthenticated) {
-<div id="personalbar">
-	<!-- Example Welcome user message -->
-	<div class="col1">
-		<span id="welcome_user">Welcome back @User.Identity.Name!</span>
-	</div>
-	<!-- Example logout button -->
-	<div class="col2">
-        @Html.ActionLink("Logout", "LogOut", "Account")
-    </div>			
-</div>
+﻿@if (Request.IsAuthenticated)
+{
+    <div id="personalbar">
+        <!-- Example Welcome user message -->
+        <div class="col1">
+            <span id="welcome_user">Welcome back @User.Identity.Name!</span>
+        </div>
+        <!-- Example logout button -->
+        <div class="col2">
+            @Html.ActionLink("Logout", "LogOut", "Account")
+        </div>
+    </div>
 }
