Changed Details view to SearchResults view.

--- a/TPS.Web/Views/NamSearch/DisplayNam.cshtml
+++ b/TPS.Web/Views/NamSearch/DisplayNam.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "NAM Details";
 }
 @section Header {
-    @Html.ActionLink("Back", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
+    @Html.ActionLink("Back", "Index", "NamSearch", null, new { data_icon = "arrow-l", data_rel = "back" })
     <h1>@ViewBag.Title</h1>
 }
 <h2>
