--- a/TPS.Web/Views/NamSearch/Index.cshtml
+++ b/TPS.Web/Views/NamSearch/Index.cshtml
@@ -6,7 +6,7 @@
 <ul data-role="listview" data-inset="true">
     <li data-role="list-divider">Find a NAM</li>
     <li>
-        @using (Html.BeginForm("Details", "NamSearch", FormMethod.Get))
+        @using (Html.BeginForm("SearchResults", "NamSearch", FormMethod.Get))
         {
             <fieldset>
                 <div>
