Added Home line to navigation.

--- a/TPS.Web/Views/NamSearch/Index.cshtml
+++ b/TPS.Web/Views/NamSearch/Index.cshtml
@@ -46,6 +46,7 @@
             </fieldset>
         }
     </li>
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
     <li>@Html.ActionLink("About", "About", "Home")</li>
     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 </ul>
