Added "No Data Available" message if zero results found.

--- a/TPS.Web/Views/NamSearch/SearchResults.cshtml
+++ b/TPS.Web/Views/NamSearch/SearchResults.cshtml
@@ -32,4 +32,20 @@
         </div>
     </fieldset>
     }
+    else
+    {
+        {
+    <fieldset>
+        <div id="no-search-results">
+            <ul data-role="listview" data-inset="true">
+                <li>
+                    <h3>
+                        No Data Available
+                    </h3>
+                </li>
+            </ul>
+        </div>
+    </fieldset>
+        }
+    }
 }
