--- a/TPS.Web/Views/NamSearch/SearchResults.cshtml
+++ b/TPS.Web/Views/NamSearch/SearchResults.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "NAM Search Results";
 }
 @section Header {
-    @Html.ActionLink("Back", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
+    @Html.ActionLink("Back", "Index", "NamSearch", null, new { data_icon = "arrow-l", data_rel = "back" })
     <h1>@ViewBag.Title</h1>
 }
 <h2>
