Added basic application specific text to Contact and About views.

--- a/TPS.Web/Views/Home/About.cshtml
+++ b/TPS.Web/Views/Home/About.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-
-<h2>About</h2>
+<h2>
+    About</h2>
 <p>
-     Put content here.
+    ASP.Net MVC Mobile application to search CR NAM database, plus revised non-purchasing
+    version of TPS application.
 </p>
-
 <ul data-role="listview" data-inset="true">
     <li data-role="list-divider">Navigation</li>
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
