--- a/TPS.Web/Views/Home/Contact.cshtml
+++ b/TPS.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,14 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-
-<h2>Contact</h2>
-
-<h3>Phone:</h3>
-<span>425.555.0100</span>
-
-<h3>Email:</h3>
-<span><a href="mailto:General@example.com">General@example.com</a></span>
-
-<ul data-role="listview" data-inset="true">
-    <li data-role="list-divider">Navigation</li>
-    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-    <li>@Html.ActionLink("About", "About", "Home")</li>
-</ul>
+<h3>
+    Developed by:</h3>
+<span>Ken Taylor. NAM Search feature based on original concept by Scott Kirkland</span>
+<h3>
+    Email:</h3>
+<span>
+    <ul data-role="listview" data-inset="true">
+        <li data-role="list-divider">Navigation</li>
+        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+    </ul>
