--- a/TPS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/TPS.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,9 @@
         </div>
         <!-- Example logout button -->
         <div class="col2">
-            @Html.ActionLink("Logout", "LogOut", "Account")
+            @* @Html.ActionLink("Log Out", "LogOut", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear", @class = "ui-btn-left" })*@
+            @* @Html.ActionLink("Logout", "LogOut", "Account")*@
         </div>
     </div>
+
 }
