--- a/TPS.Web/Views/Home/Contact.cshtml
+++ b/TPS.Web/Views/Home/Contact.cshtml
@@ -6,9 +6,9 @@
 <span>Ken Taylor. NAM Search feature based on original concept by Scott Kirkland</span>
 <h3>
     Email:</h3>
-<span>
-    <ul data-role="listview" data-inset="true">
-        <li data-role="list-divider">Navigation</li>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-    </ul>
+<span><a href="mailto:kentaylor@ucdavis.edu">kentaylor@ucdavis.edu</a></span>
+<ul data-role="listview" data-inset="true">
+    <li data-role="list-divider">Navigation</li>
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink("About", "About", "Home")</li>
+</ul>
