--- a/TPS.Web/Views/Home/Index.cshtml
+++ b/TPS.Web/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "TPS 4";
 }
 <h2>@ViewBag.Message</h2>
 <p>
-    To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">
-        http://asp.net/mvc</a>.
+   
 </p>
 <ul data-role="listview" data-inset="true">
     <li data-role="list-divider">Navigation</li>
